--- a/src/components/AddCardGame.css
+++ b/src/components/AddCardGame.css
@@ -1,9 +1,93 @@
-.dropdown-select {
-  background-color: #f45342;
+.addgame-select {
+  background-color: gray;
   color: white;
   height: 40px;
-  width: 200px;
+  font-size: 13px;
 }
 
-.select-game-container {
+.addgame-input {
+  height: 40px;
+  font-size: 13px;
+}
+
+.optional-player {
+  display: none;
+}
+
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Customize the label (the container) */
+.addgame-checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.addgame-checkbox-container input {
+  opacity: 0;
+  cursor: pointer;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+}
+
+/* Create a custom checkbox */
+.addgame-checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.addgame-checkbox-container:hover input ~ .addgame-checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.addgame-checkbox-container input:checked ~ .addgame-checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.addgame-checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.addgame-checkbox-container input:checked ~ .addgame-checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.addgame-checkbox-container .addgame-checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
