--- a/src/components/AddCardGame.css
+++ b/src/components/AddCardGame.css
@@ -91,3 +91,11 @@ select {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+/* Invalid input marker for validation */
+input.error {
+  border: 2px solid red;
+}
+.error {
+  border: 2px solid red;
+}
