--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.recorded-game-container {
+  padding: 15px;
+  text-align: center;
+}
+
+.recorded-game-gameName {
+
+}
+
+.recorded-game-players {
+  display: inline;
+}
+
+.recent-games-title {
+  text-align: center;
+}
