--- a/src/components/tabs/Rankings.css
+++ b/src/components/tabs/Rankings.css
@@ -1,3 +1,14 @@
+.logo-image_container {
+  text-align: center;
+}
+
+.card-game-logo-image {
+  width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .rankings-row {
   padding-left: 5%;
   padding-right: 5%;
@@ -14,7 +25,7 @@
 
 .rankings-toolbar {
   background: grey;
-  margin-top: 50px;
+  margin-top: 1%;
   width: 100%;
   display: inline-block;
 }
