cipher stats search by deck name now returns and displays insignia image file

--- a/src/components/tabs/stats/Stats.css
+++ b/src/components/tabs/stats/Stats.css
@@ -28,6 +28,11 @@
   margin-left: 2.5%;
 }
 
+.insignia-logo-image-tiny {
+  width: 2%;
+  margin-left: 2.5%;
+}
+
 .insignia-logo-image-row-header {
   width: 12%;
   margin-left: 2.5%;
