--- a/src/components/nav/Landing.css
+++ b/src/components/nav/Landing.css
@@ -1,19 +1,34 @@
 .landing-title-header {
   text-align: center;
-  font-size: 700%;
-  letter-spacing: 5px;
+  font-size: 600%;
+  letter-spacing: 3px;
   color: white;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .landing-button {
-  width: 25%;
-  position: relative;
-  margin-top: 5%;
-  left: 37.5%;
-  font-size: 200%;
+  font-size: 125%;
   color: black;
   background-color: white;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  border-radius: 5px;
+}
+
+.landing-button-container {
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+.landing-buttons-container {
+  margin-top: 7.5%;
+  background-color: #282828;
+  margin-left: 35%;
+  margin-right: 35%;
+  border-radius: 15px;
+  border-color: white;
+  border-style: solid;
+  border-width: 1px;
 }
 
 .landing-container {
@@ -27,6 +42,4 @@
 
   /* Center and scale the image nicely */
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
