applied new landing page theme to login page

--- a/src/components/auth/PasswordForget.css
+++ b/src/components/auth/PasswordForget.css
@@ -6,3 +6,15 @@
   text-align: center;
   color: red;
 }
+
+p {
+  color: white;
+}
+
+.link-text {
+  color: white;
+}
+
+.link-text:hover {
+  color: red;
+}
