--- a/src/components/auth/PasswordForget.css
+++ b/src/components/auth/PasswordForget.css
@@ -18,3 +18,16 @@ p {
 .link-text:hover {
   color: red;
 }
+
+.passwordforgot-container {
+  /* The image used */
+  background-image: url('/assets/images/magicTheGathering_background.png');
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+  position: fixed;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+}
